--- a/package.json
+++ b/package.json
@@ -40,9 +40,14 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
     "@shrutibalasa/tailwind-grid-auto-fit": "^1.1.0",
     "autoprefixer": "^10.4.13",
+    "babel-jest": "^29.3.1",
+    "jest": "^27.5.1",
     "postcss": "^8.4.19",
+    "react-test-renderer": "^18.2.0",
     "tailwindcss": "^3.2.4"
   }
 }
