--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.1",
     "react": "^18.2.0",
@@ -18,7 +17,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -43,8 +42,11 @@
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "@shrutibalasa/tailwind-grid-auto-fit": "^1.1.0",
+    "@testing-library/react": "^13.4.0",
+    "@types/jest": "^29.2.6",
     "autoprefixer": "^10.4.13",
     "babel-jest": "^29.3.1",
+    "enzyme": "^3.11.0",
     "jest": "^27.5.1",
     "postcss": "^8.4.19",
     "react-test-renderer": "^18.2.0",
