--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.1",
+    "identity-obj-proxy": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-responsive-carousel": "^3.2.23",
@@ -41,6 +42,7 @@
   "devDependencies": {
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
+    "@cfaester/enzyme-adapter-react-18": "^0.6.0",
     "@shrutibalasa/tailwind-grid-auto-fit": "^1.1.0",
     "@testing-library/react": "^13.4.0",
     "@types/jest": "^29.2.6",
